--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "ws": "^8.13.0"
   },
   "devDependencies": {
-    "@types/ws": "^8.5.5"
+    "@types/long": "^5.0.0",
+    "@types/ws": "^8.5.5",
+    "typescript": "^5.1.3"
   }
 }
