--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "gobbq-ts",
-  "version": "1.0.0",
+  "version": "1.0.5",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
+  "types": "src/index.d.ts",
   "directories": {
     "example": "example"
   },
@@ -28,5 +29,8 @@
     "@types/long": "^5.0.0",
     "@types/ws": "^8.5.5",
     "typescript": "^5.1.3"
-  }
+  },
+  "files": [
+    "dist/**/*"
+  ]
 }
